tests/errors/first_stage/operation/immediate_oor/immediate_oor.am
prn #2047
prn #-2048
prn #2048
